added bootstrap to react

--- a/programowanie-dokumentow-dynamicznych/public/index.html
+++ b/programowanie-dokumentow-dynamicznych/public/index.html
@@ -9,8 +9,8 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
-    <link rel="stylesheet" href="./design/bootstrap-4.3.1-dist/css/bootstrap.css.map">
+    <title>Marcin Oleszczuk</title>
+    <link rel="stylesheet" href="./design/bootstrap-4.3.1-dist/css/bootstrap.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
